--- a/src/pages/TeacherList/styles.css
+++ b/src/pages/TeacherList/styles.css
@@ -9,42 +9,7 @@
 }
 
 #search-teachers label {
-    color: var(--color-text-in-primary)
-}
-
-#search-teachers .input-block {
-    position: relative;
-}
-
-#search-teachers .input-block + .input-block {
-    margin-top: 1.4rem;
-}
-
-#search-teachers .input-block label {
-    font-size: 1.4rem;
-}
-
-#search-teachers .input-block input {
-    width: 100%;
-    height: 5.6rem;
-    margin-top: 0.8rem;
-    border-radius: 0.8rem;
-    background: var(--color-input-background);
-    border: 1px solid var(--color-line-in-white);
-    outline: 0;
-    padding: 0 1.6rem;
-    font: 1.6rem Archivo;
-}
-
-#search-teachers .input-block:focus-within::after {
-    width: (100% - 3.2rem);
-    height: 2px;
-    content: "";
-    background: var(--color-primary-light);
-    position: absolute;
-    left: 1.6rem;
-    right: 1.6rem;
-    bottom: 0;
+    color: var(--color-text-in-primary);
 }
 
 #page-teacher-list main {
@@ -52,13 +17,9 @@
     width: 90%;
 }
 
-.teacher-item footer button:hover {
-    background: var(--color-secundary-dark);
-}
-
 @media (min-width: 700px) {
     #page-teacher-list {
-        max-width: 100vh;
+        max-width: 100vw;
     }
 
     #search-teachers {
@@ -68,7 +29,8 @@
         position: absolute;
         bottom: -58px;
     }
-    #search-teachers .input-block + .input-block {
+    #search-teachers .input-block + .input-block,
+    #search-teachers .select-block + .select-block {
         margin-top: 0;
     }
 
