--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -19,6 +19,7 @@
     --color-button-text: #FFFFFF;
     --color-box-base: #FFFFFF;
     --color-box-footer: #FAFAFC;
+    --color-select-background: #F8F8FC;
   
 }
 
