--- a/src/pages/TeacherForm/styles.css
+++ b/src/pages/TeacherForm/styles.css
@@ -89,7 +89,7 @@
     height: 5.6rem;
     background: var(--color-secundary);
     color: var(--color-button-text);
-    border: 0;
+    border: none;
     border-radius: 0.8rem;
     cursor: pointer;
     font: 700 1.6rem Archivo;
@@ -99,6 +99,7 @@
     text-decoration: none;
     transition: background-color 0.2s;
     margin-top: 3.2rem;
+    
 }
 
 
@@ -143,5 +144,7 @@
     #page-teacher-form main footer button {
         width: 20rem;
         margin-top: 0;
+        margin-left: 10rem;
+        
     }
 }
